fixed issue #7225 Event card alignment

--- a/app/styles/partials/event-card.scss
+++ b/app/styles/partials/event-card.scss
@@ -47,6 +47,7 @@
   }
 
   .main.content {
+    padding:100px;
     display: block;
     height: 130px;
   }
